--- a/views/game.ejs
+++ b/views/game.ejs
@@ -99,23 +99,23 @@
 </head>
 <body>
   <!-- Modal -->
-  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="endgame" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="staticBackdropLabel">Tired??</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          Are you sure you want to end the game?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Nope! Changed my Mind</button>
+          <a href="/endgame" class="btn btn-primary">Yess, Dammit!</a>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div class="d-flex justify-content-center mt-2 mb-3">
     <h3>Monopoly</h3>
@@ -391,6 +391,11 @@
               </div>
             </div>
         </div>
+
+        <div class="d-flex justify-content-center mt-2">
+            <a class="btn btn-success" data-bs-toggle="modal" data-bs-target="#endgame">End Game</a>
+        </div>
+        
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
