--- a/views/jail.ejs
+++ b/views/jail.ejs
@@ -46,10 +46,10 @@
               <h5 class="modal-title" id="staticBackdropLabel">Selling your land</h5>
               <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
             </div>
-            <form action="/monopoly/<%=p%>/sell">
+            <form action="/monopoly/<%=p%>/sell/Jail">
               <div class="modal-body">
                 <p>
-                  <img src="https://res.cloudinary.com/dc4kfswj7/image/upload/v1669310854/dsMp/7208dd_jwxqzv.jpg" alt="BROKE" width="450px" height="350px">
+                  <img src="https://res.cloudinary.com/dc4kfswj7/image/upload/v1669824015/dsMp/72n86y_zv3frh.jpg" alt="BROKE" width="450px" height="350px">
                 </p>
                 <label class="form-label" for="teleport">Among the cities you have owned, which do want to sell? (to the Bank ofc)</label> <br>
                 <select name="toSell" id="selling">
