--- a/views/mortage.ejs
+++ b/views/mortage.ejs
@@ -40,7 +40,7 @@
             <h5 class="modal-title" id="staticBackdropLabel">Selling your land</h5>
             <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
           </div>
-          <form action="/monopoly/<%=p%>/sell">
+          <form action="/monopoly/<%=p%>/sell/<%=currentBlock.object.title%>">
             <div class="modal-body">
               <p>
                 <img src="https://res.cloudinary.com/dc4kfswj7/image/upload/v1669310854/dsMp/7208dd_jwxqzv.jpg" alt="BROKE" width="450px" height="350px">
