--- a/views/winner.ejs
+++ b/views/winner.ejs
@@ -8,22 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik+Marker+Hatch&family=Rubik+Distressed">
     <style>
-        body { 
-            background-image: radial-gradient(red, yellow, black);
-            background-size: cover;
-        }
-        div.card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+        
     </style>
 </head>
 <body>
     <main>
-        <%- body %> 
+        <div class="d-flex justify-content-center">
+            <div class="card" style="width: 40rem;">
+                <img src="https://res.cloudinary.com/dc4kfswj7/image/upload/v1669823325/dsMp/72n62k_g9khkd.jpg" class="card-img-top" alt="Congo">
+                <div class="card-body">
+                  <h5 class="card-title">Congratulations!!!</h5>
+                  <p class="card-text"><%= winner %> won the twisted monopoly game by &#8377 <%= dif %> </p>
+                  <a href="/" class="btn btn-primary">Thank You</a>
+                </div>
+              </div>
+        </div>     
     </main>
-    <!-- <script>
-        document.body.style.backgroundImage = "url('https://res.cloudinary.com/dc4kfswj7/image/upload/v1668806650/dsMp/html-color-codes-color-tutorials-hero_lpffhc.jpg')";
-    </script>  -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
